CLDINT-129 recommendations of admins: make binaries universal for local and hosted use via host variables